k8s/database-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database-service
  template:
    metadata:
      labels:
        app: database-service
    spec:
      containers:
      - name: database-service
        image: database-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
